# tumbs.app

./: .editorconfig  .env.dev  .gitignore  LICENSE.txt  Makefile  README.md  manage.py  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements-prod.txt  requirements-test.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
config/: urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
locale/cs/LC_MESSAGES/: django.po  djangojs.po
requirements/: dev.txt  prod.txt  test.txt
tumbs/accounts/: apps.py  context_processors.py  decorators.py  urls.py  views.py
tumbs/static/js/: cms.js  project.js  vendors.js
tumbs/static/js/cms/: App.js  config.js  i18n.js  network.js  store.js
tumbs/static/js/cms/components/: Alerts.js  App.js  CollapseArea.js  CreateWebsiteButton.js  CurrentPageProvider.js  DeleteDialog.js  ImageEditor.js  ImageThumbnail.js  ImageToolbar.js  ImageUploader.js  NewWebsiteModal.js  PageDetailsDialog.js  PageEditor.js  PageSelect.js  RichText.js  SelectPage.js  SelectWebsite.js  SeoBadge.js  UpdateWebsiteDialog.js  UpdateWebsiteModal.js  WebsiteDetailsDialog.js  WebsiteNameEditor.js  WebsiteSelect.js  WebsiteTopBar.js
tumbs/static/js/cms/components/widgets/: Gallery.js  Profile.js  Textual.js
tumbs/static/js/cms/slices/: alerts.js  dialogs.js  newWebsiteModal.js  pages.js  stash.js  updateWebsiteDialog.js  updateWebsiteModal.js  websites.js
tumbs/static/sass/: bs-vars.scss  bs.scss  fonts.scss  project.scss
tumbs/static/sass/cms/: collapse-control.scss  image-box.scss  image-thumbnail.scss  inline-editable.scss  mdxeditor.scss  website-top-bar.scss  widgets.scss
tumbs/templates/: 403_csrf.html  404.html  500.html  _base.html  base.html
tumbs/templates/pages/: home.html  websites.html  websites_admin.html
tumbs/users/: admin.py  apps.py  forms.py  managers.py  models.py
tumbs/users/migrations/: 0001_initial.py
tumbs/websites/: admin.py  api.py  apps.py  models.py  urls.py  views.py
tumbs/websites/api/: __init__.py  fields.py  permissions.py  urls.py
tumbs/websites/api/images/: serializers.py  urls.py  views.py
tumbs/websites/api/pages/: serializers.py  urls.py  views.py
tumbs/websites/api/websites/: serializers.py  urls.py  views.py
tumbs/websites/migrations/: 0001_initial.py  0002_alter_image_file_alter_website_unique_together.py  0002_alter_image_options_alter_page_options_and_more.py  0003_image_deleted_page_deleted_website_deleted.py  0004_image_meta.py  0005_website_language_website_region.py  0006_alter_website_options_alter_website_unique_together.py  0007_website_domain.py  0008_alter_page_content.py
tumbs/websites/models/: __init__.py  image.py  page.py  website.py
tumbs/websites/tests/: conftest.py  test_exif.py  test_images.py  test_pages.py  test_websites.py
tumbs/websites/tests/api/: conftest.py  test_images.py  test_pages.py  test_websites.py
tumbs/websites/utils/: exif.py  languages.py
webpack/: common.config.js  dev.config.js  prod.config.js
