[project]
name = "tumbs.app"
authors = [
    {name = "Ondřej Nejedlý", email = "jsmesami@gmail.com"},
]
dynamic = ["version"]
description = "Portfolio website generator"
readme = "README.md"
license = {file = "LICENSE.txt"}
requires-python = ">=3.12"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "argon2-cffi",                  # https://github.com/hynek/argon2_cffi
    "hiredis",                      # https://github.com/redis/hiredis-py
    "orjson",                       # https://github.com/ijl/orjson
    "Pillow",                       # https://github.com/python-pillow/Pillow
    "python-magic",                 # https://github.com/ahupp/python-magic
    "redis",                        # https://github.com/redis/redis-py
    "whitenoise",                   # https://github.com/evansd/whitenoise

    "django",                       # https://www.djangoproject.com/
    "django-environ",               # https://github.com/joke2k/django-environ
    "django-extensions",            # https://github.com/django-extensions/django-extensions
    "django-ipware",                # https://github.com/un33k/django-ipware
    "django-ordered-model",         # https://github.com/django-ordered-model/django-ordered-model
    "django-redis",                 # https://github.com/jazzband/django-redis
    "django-webpack-loader",        # https://github.com/django-webpack/django-webpack-loader
    "djangorestframework",          # https://github.com/encode/django-rest-framework
    "drf-standardized-errors",      # https://github.com/ghazi-git/drf-standardized-errors

    "kinde-python-sdk",             # https://kinde.com/
]

[project.optional-dependencies]
dev = [
    "django-debug-toolbar",         # https://github.com/jazzband/django-debug-toolbar
    "pip-tools",                    # https://github.com/jazzband/pip-tools
    "psycopg[binary]",              # https://github.com/psycopg/psycopg
    "Werkzeug[watchdog]",           # https://github.com/pallets/werkzeug
]
test = [
    "coverage",                     # https://github.com/nedbat/coveragepy
    "black",                        # https://github.com/psf/black
    "django-coverage-plugin",       # https://github.com/nedbat/django_coverage_plugin
    "djlint",                       # https://github.com/Riverside-Healthcare/djLint
    "isort",                        # https://github.com/pycqa/isort/
    "psycopg[binary]",              # https://github.com/psycopg/psycopg
    "pylint-django",                # https://github.com/PyCQA/pylint-django
    "pytest",                       # https://github.com/pytest-dev/pytest
    "pytest-django",                # https://github.com/pytest-dev/pytest-django
    "pytest-sugar",                 # https://github.com/Frozenball/pytest-sugar
]
prod = [
    "django-anymail[amazon-ses]",   # https://github.com/anymail/django-anymail
    "django-storages[s3]",          # https://github.com/jschneier/django-storages
    "gunicorn",                     # https://github.com/benoitc/gunicorn
    "gunicorn[gevent]",
    "psycopg[c]",                   # https://github.com/psycopg/psycopg
    "sentry-sdk",                   # https://github.com/getsentry/sentry-python
]

[project.urls]
homepage = "https://tumbs.app"
repository = "https://github.com/jsmesami/tumbs.app"

# ==== Build ====
[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["tumbs"]
zip-safe = false

[tool.setuptools.dynamic]
version = {attr = "tumbs.__version__"}

[tool.setuptools.package-data]
tumbs = ["tumbs/templates/**.html"]

# ==== Coverage ====
[tool.coverage.run]
include = ["tumbs/**"]
omit = ["*/migrations/*", "*/tests/*"]
plugins = ["django_coverage_plugin"]

[tool.coverage.report]
show_missing = true
precision = 2

# ==== Black ====
[tool.black]
line-length = 119
target-version = ['py312']

# ==== Isort ====
[tool.isort]
profile = "black"
line_length = 119
known_first_party = [
    "tumbs",
    "config",
]
skip = ["venv/"]
skip_glob = ["**/migrations/*.py"]

# ==== PyLint ====
[tool.pylint.MASTER]
load-plugins = [
    "pylint_django",
]
django-settings-module = "config.settings.local"
ignore-paths = [".*/migrations/.*"]

[tool.pylint.FORMAT]
max-line-length = 119

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "missing-docstring",
    "invalid-name",
    "too-few-public-methods",
]

[tool.pylint.DESIGN]
max-parents = 13

# ==== djLint ====
[tool.djlint]
blank_line_after_tag = "load,extends"
close_void_tags = true
format_css = true
format_js = true
# TODO: remove T002 when fixed https://github.com/Riverside-Healthcare/djLint/issues/687
ignore = "H006,H030,H031,T002"
include = "H017,H035"
indent = 2
max_line_length = 119
profile = "django"

[tool.djlint.css]
indent_size = 2

[tool.djlint.js]
indent_size = 2

# ==== PyTest ====
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
testpaths = ["websites/tests"]
